# C-CPP_HW_1_ParkMailRu

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  computers.c  computers.h  gtesting.cpp  in.txt  main.c  menu.c  menu.h  tests.cpp
data/: ex.txt
lib/digraphs/: CMakeLists.txt
lib/digraphs/include/: digraphs.h
lib/digraphs/src/: digraphs.c
lib/graphs/: CMakeLists.txt
lib/graphs/include/: graphs.h
lib/graphs/src/: graphs.c
lib/graphs/tests/: CMakeLists.txt  CmakeLists.txt
lib/graphs/tests/src/: test_graphs.cpp
lib/parallel_identif/: CMakeLists.txt
lib/parallel_identif/include/: parallel_identif.h
lib/parallel_identif/src/: parallel_identif.c
lib/parallel_parser/: CMakeLists.txt
lib/parallel_parser/include/: parallel_parser.h  parser.h
lib/parallel_parser/src/: parallel_parser.c
lib/parallel_parser/tests/: CmakeLists.txt
lib/parallel_parser/tests/src/: test_parallel_parser.cpp
lib/serial_parser/: CMakeLists.txt
lib/serial_parser/include/: parser.h  serial_parser.h
lib/serial_parser/src/: serial_parser.c
lib/serial_parser/tests/: CMakeLists.txt  CmakeLists.txt
lib/serial_parser/tests/src/: test_serial_parser.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: utils.c
src/: main.c
tests/stress_test/: HOW-TO.md  stress_test.sh
tests/test_on_rand_data/: test_on_rand_data.sh
